feat(encryption): implement file encryption and decryption methods (issue #add_encryption)
- Updated the `encrypt` method to return a Base64 encoded secret key.
- Modified the `Main` class to use the new `encrypt` method and added
  decryption functionality.
- Refactored file reading and writing to use buffered streams for better
  performance and memory management.