@@ -4,8 +4,7 @@ import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.*;
 import java.security.Security;
 import java.util.Base64;
 
@@ -16,7 +15,7 @@ public class Encrypt {
         Security.addProvider(new BouncyCastleProvider());
     }
 
-    public static void encrypt(String input, String output) throws Exception {
+    public static String encrypt(String input, String output) throws Exception {
         // Generate AES Key
         KeyGenerator keyGen = KeyGenerator.getInstance("AES", "BC");
         keyGen.init(256); // 256-bit AES
@@ -27,16 +26,22 @@ public class Encrypt {
         cipher.init(Cipher.ENCRYPT_MODE, secretKey);
 
         // Read the input file to encrypt
-        byte[] inputBytes = Files.readAllBytes(Paths.get(input));
+        byte[] inputBytes;
+        try (BufferedInputStream bis = new BufferedInputStream(new FileInputStream(input))) {
+            inputBytes = bis.readAllBytes();
+        }
 
         // Perform encryption
         byte[] encryptedBytes = cipher.doFinal(inputBytes);
 
         // Write encrypted data to output file
-        Files.write(Paths.get(output), encryptedBytes);
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter(output))) {
+            writer.write(Base64.getEncoder().encodeToString(encryptedBytes));
+        }
 
         // Optionally: Encode key to a string and print or store
         String encodedKey = Base64.getEncoder().encodeToString(secretKey.getEncoded());
         System.out.println("Secret Key (Base64 encoded): " + encodedKey);
+        return encodedKey;
     }
 }
